some update for the introduction

--- a/Topic.ipynb
+++ b/Topic.ipynb
@@ -27,7 +27,9 @@
     "\n",
     "# Introduction\n",
     "\n",
-    "This project aims to investigate potential factors that affect the cancer death rate. Based on the baseline datasets found, the project would mainly take the state which has the highest cancer mortality as the main comparison sample, focusing on the field of education, air quality, and population distribution to investigate their correlation to the cancer death rate. \n",
+    "\n",
+    "This project aims to investigate potential factors that affect the cancer death rate. Based on the baseline datasets found, the project would mainly take the state which has the highest cancer mortality as the main comparison sample, focusing on the field of education, air quality, aging population, and race differences to investigate their correlation to the cancer death rate. \n",
+    "\n",
     "\n",
     "## Data Description and Source \n",
     "| Dataset                                                   | Description                                                  | Organization & Link                                          |\n",
